<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">


    <TextView
        android:id="@+id/loginAdminFrag_tvGlad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20sp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="187sp"
        android:text="Admin Login"
        android:textColor="@color/red"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="187dp" />



    <TextView
        android:id="@+id/loginAdminFrag_tvId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20sp"
        android:text="Admin ID"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/loginAdminFrag_tilId" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/loginAdminFrag_tilId"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_marginStart="20sp"
        android:layout_marginTop="70sp"
        android:layout_marginEnd="20sp"
        app:boxStrokeColor="@color/red"
        android:textCursorDrawable="@color/red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginAdminFrag_tvGlad">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loginAdminFrag_tietId"
            android:paddingBottom="10sp"
            android:layout_width="match_parent"
            android:textCursorDrawable="@drawable/red_til_cursor"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/red" />
    </com.google.android.material.textfield.TextInputLayout>




    <TextView
        android:id="@+id/loginAdminFrag_tvPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20sp"
        android:text="@string/password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/loginAdminFrag_tilPass" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/loginAdminFrag_tilPass"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        app:boxStrokeColor="@color/red"
        android:layout_marginStart="20sp"
        android:layout_marginTop="25sp"
        android:layout_marginEnd="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginAdminFrag_tilId">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loginAdminFrag_tietPass"
            android:paddingBottom="10sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textCursorDrawable="@drawable/red_til_cursor"
            android:backgroundTint="@color/red"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>




    <Switch
        android:id="@+id/loginAdminFrag_switchRem"
        android:layout_width="wrap_content"
        android:layout_height="55sp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12sp"
        android:checked="false"
        android:thumbTint="@color/red"
        android:trackTint="@drawable/switch_track_selector_red"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginAdminFrag_tilPass"
        tools:ignore="UseSwitchCompatOrMaterialXml" />


    <TextView
        android:id="@+id/loginAdminFrag_tvRem"
        android:layout_width="wrap_content"
        android:layout_height="55sp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:text="@string/remember_me"

        app:layout_constraintStart_toEndOf="@+id/loginAdminFrag_switchRem"
        app:layout_constraintTop_toBottomOf="@+id/loginAdminFrag_tilPass" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginAdminFrag_btUserLogin"
        android:layout_width="130sp"
        android:layout_height="55sp"
        app:cornerRadius="0sp"
        android:text="User Login"
        android:textSize="13sp"
        android:gravity="end|center_vertical"
        android:layout_gravity="end"
        android:textAlignment="viewEnd"
        android:textColor="@color/red"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="1sp"
        android:layout_marginTop="12sp"
        app:layout_constraintTop_toBottomOf="@id/loginAdminFrag_tilPass"
        android:background="@color/ap_transparent"
        >
    </com.google.android.material.button.MaterialButton>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginAdminFrag_btLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp"
        android:text="@string/log_in"
        android:backgroundTint="@color/red"
        app:cornerRadius="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginAdminFrag_tvRem"
        />





</androidx.constraintlayout.widget.ConstraintLayout>